force-app/main/default/objects/Opportunity/fields/Account_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Region_Code__c</fullName>
    <businessOwnerUser>mmikael.franzen@dllgroup.com.st01d06</businessOwnerUser>
    <description>This field is used to store the Account Region Code. It is used in Delete_NonSynced_quotes Flow to get the opportunities with SE region code. (US - 677478)</description>
    <formula>Account.Account_Region_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to store the Account Region Code.</inlineHelpText>
    <label>Account Region Code</label>
    <type>Text</type>
</CustomField>