force-app/main/default/objects/Opportunity/fields/ACH_On_File__c.field-meta.xml
<CustomField>
    <fullName>ACH_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automated Clearing House. When checked automatically updates status of ACH related documents</description>
    <inlineHelpText>Check this box if the ACH is on file</inlineHelpText>
    <label>ACH On File</label>
    <type>Checkbox</type>
</CustomField>