force-app/main/default/objects/Opportunity/fields/Actions_and_next_steps__c.field-meta.xml
<CustomField>
    <fullName>Actions_and_next_steps__c</fullName>
    <description>NBD</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Actions and next steps</label>
    <type>TextArea</type>
</CustomField>