force-app/main/default/objects/Opportunity/fields/Advance_Payments__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payments__c</fullName>
    <description>How many Advance payments made.</description>
    <inlineHelpText>How many Advance payments made or will be made ?</inlineHelpText>
    <label>Advance Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>