force-app/main/default/objects/Opportunity/fields/Advanced_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Exposure__c</fullName>
    <description>Advanced finance vs cost risk analysis of sale</description>
    <label>Advanced Exposure</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>