force-app/main/default/objects/Opportunity/fields/Application_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Approval_Date__c</fullName>
    <description>This field shows the date/time when an Opportunity has been credit scored.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Decision Date</label>
    <type>Date</type>
</CustomField>