force-app/main/default/objects/Opportunity/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This is the date the application is first entered in the source system.</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>