force-app/main/default/objects/Opportunity/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Application Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>