force-app/main/default/objects/Opportunity/fields/Application_Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Application_Processing_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Fee charged for processing the application</description>
    <label>Application Processing Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>