force-app/main/default/objects/Opportunity/fields/Application_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When the user completes initial entry and submits the applications.</inlineHelpText>
    <label>Application Submission Date</label>
    <type>DateTime</type>
</CustomField>