force-app/main/default/objects/Opportunity/fields/Approval_Letter_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Letter_Expiration_Date__c</fullName>
    <description>This field contains the Approval Letter Expiration Date from Wayne/Mosaic</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Letter Expiration Date</label>
    <type>Date</type>
</CustomField>