force-app/main/default/objects/Opportunity/fields/Approved_Asset_class__c.field-meta.xml
<CustomField>
    <fullName>Approved_Asset_class__c</fullName>
    <description>NBD</description>
    <label>Approved Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>To be Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>