force-app/main/default/objects/Opportunity/fields/Approved_DEP__c.field-meta.xml
<CustomField>
    <fullName>Approved_DEP__c</fullName>
    <formula>CASE(StageName,
&quot;Application is Approved&quot;,1,
&quot;Application Approved&quot;,1,
&quot;Quoting&quot;,1,
&quot;Docs Out&quot;,1,
&quot;Docs Back&quot;,1,
&quot;PO Sent&quot;,1,
&quot;Application Declined&quot;,1,
&quot;Expired&quot;,1,
&quot;Booked&quot;,1,
&quot;Development of Offer/Proposal&quot;, 1,
&quot;Negotiating&quot;, 1,
&quot;In Credit&quot;,1,
&quot;Documentation&quot;,1,
&quot;Closed Won&quot;,1,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved?_DEP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>