force-app/main/default/objects/Opportunity/fields/Asset_Market_Category__c.field-meta.xml
<CustomField>
    <fullName>Asset_Market_Category__c</fullName>
    <label>Asset/Market Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Business_Unit1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Kyocera Digital Copier</fullName>
            </value>
            <value>
                <fullName>Kyocera Printer</fullName>
            </value>
            <value>
                <fullName>Toshiba Digital Copier</fullName>
            </value>
            <value>
                <fullName>Toshiba Printer</fullName>
            </value>
            <value>
                <fullName>Sharp DC</fullName>
            </value>
            <value>
                <fullName>Sharp Printer</fullName>
            </value>
            <value>
                <fullName>Ricoh DC</fullName>
            </value>
            <value>
                <fullName>Ricoh Printer</fullName>
            </value>
            <value>
                <fullName>Konica Minolta DC</fullName>
            </value>
            <value>
                <fullName>KM Printer</fullName>
            </value>
            <value>
                <fullName>Dealer Printer</fullName>
            </value>
            <value>
                <fullName>Dealer Digital Copier</fullName>
            </value>
            <value>
                <fullName>Clean Tech</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Fitness</fullName>
            </value>
            <value>
                <fullName>Home Health</fullName>
            </value>
            <value>
                <fullName>Imaging</fullName>
            </value>
            <value>
                <fullName>Life Science</fullName>
            </value>
            <value>
                <fullName>Ophthalmic</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>AGV</fullName>
            </value>
            <value>
                <fullName>Class I - Counterbalance Electric</fullName>
            </value>
            <value>
                <fullName>Class II - Narrow Aisle</fullName>
            </value>
            <value>
                <fullName>Class III - Powered Walk Behind</fullName>
            </value>
            <value>
                <fullName>Class IV - Cushion Tire ICE</fullName>
            </value>
            <value>
                <fullName>Class V - Pneumatic Tire ICE</fullName>
            </value>
            <value>
                <fullName>Class VII - Tow Tractor</fullName>
            </value>
            <value>
                <fullName>Forklift Accessories</fullName>
            </value>
            <value>
                <fullName>MH Allied equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>