force-app/main/default/objects/Opportunity/fields/Average_transaction_size__c.field-meta.xml
<CustomField>
    <fullName>Average_transaction_size__c</fullName>
    <description>NBD</description>
    <label>Average transaction size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>