force-app/main/default/objects/Opportunity/fields/Beneficial_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Type__c</fullName>
    <description>Captured in the Ownership Information (UBO) section of a DLL on Demand credit application</description>
    <inlineHelpText>Captured in the Ownership Information (UBO) section of a DLL on Demand credit application</inlineHelpText>
    <label>Beneficial Owner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner(s)</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Board of Directors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>