force-app/main/default/objects/Opportunity/fields/Billing_Address_Preference__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Preference__c</fullName>
    <description>For DLL on Demand Portal - records whether the user selected the default Billing Address for the End User Account (System Address) or entered a new Billing Address</description>
    <label>Billing Address Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use existing billing address</fullName>
            </value>
            <value>
                <fullName>Enter new billing address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>