force-app/main/default/objects/Opportunity/fields/Booked_Amount_FORMULA__c.field-meta.xml
<CustomField>
    <fullName>Booked_Amount_FORMULA__c</fullName>
    <formula>Contract__r.Booked_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>