force-app/main/default/objects/Opportunity/fields/Business_Origination__c.field-meta.xml
<CustomField>
    <fullName>Business_Origination__c</fullName>
    <description>NBD</description>
    <label>Business Origination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Select</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Commercial Finance</fullName>
            </value>
            <value>
                <fullName>Portfolio acquisition</fullName>
            </value>
            <value>
                <fullName>Financial Intermediary</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Fee For Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>