force-app/main/default/objects/Opportunity/fields/Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment__c</fullName>
    <label>Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Finance</fullName>
                <color>#FFFFFF</color>
                <label>Public Finance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>