force-app/main/default/objects/Opportunity/fields/Business_Structure__c.field-meta.xml
<CustomField>
    <fullName>Business_Structure__c</fullName>
    <description>Type of Business</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Type of Business</inlineHelpText>
    <label>Business Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>