force-app/main/default/objects/Opportunity/fields/Business_Unit1__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit1__c</fullName>
    <defaultValue>$User.Business_Unit_TEXT__c</defaultValue>
    <label>Opportunity Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanced Solutions</fullName>
            </value>
            <value>
                <fullName>Clean Technology</fullName>
            </value>
            <value>
                <fullName>Commercial Finance</fullName>
            </value>
            <value>
                <fullName>Construction, Transportation &amp; Infrastructure (CTI)</fullName>
            </value>
            <value>
                <fullName>Food &amp; Agriculture (F&amp;A)</fullName>
            </value>
            <value>
                <fullName>Golf and Turf (G&amp;T)</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Office Equipment (OE)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pay Per Use</fullName>
            </value>
            <value>
                <fullName>Public Finance</fullName>
            </value>
            <value>
                <fullName>Technology Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>