force-app/main/default/objects/Opportunity/fields/Business_Unit_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Description__c</fullName>
    <description>Captures the name of the Opportunity&apos;s related Business_Unit__c record as a text value. Used in Sharing Rules to permit sharing by Business Unit. Required because sharing rules cannot be written leveraging Lookup field values (i.e. Business_Unit__c). Populated by Apex code.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Unit Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>