force-app/main/default/objects/Opportunity/fields/CF_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>CF_Account_ID__c</fullName>
    <description>Formula field which holds the CF Account ID AutoNumber value from Account for CCRIS</description>
    <formula>Account.CF_Account_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CCRIS AutoNumber</inlineHelpText>
    <label>CF Account ID</label>
    <type>Text</type>
</CustomField>