force-app/main/default/objects/Opportunity/fields/Change_date__c.field-meta.xml
<CustomField>
    <fullName>Change_date__c</fullName>
    <businessOwnerUser>mmikael.franzen@dllgroup.com.st01d06</businessOwnerUser>
    <description>Synced Quote last modified date</description>
    <formula>SyncedQuote.LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Synced Quote last modified date</inlineHelpText>
    <label>Change date</label>
    <type>Date</type>
</CustomField>