force-app/main/default/objects/Opportunity/fields/Close_Date_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Hidden__c</fullName>
    <description>Needed in Year-Over-Year reporting.</description>
    <formula>CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date_Hidden</label>
    <type>Date</type>
</CustomField>