force-app/main/default/objects/Opportunity/fields/Commercial_Finance__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Finance__c</fullName>
    <label>Commercial Finance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes: Indirect - Tier 1</fullName>
            </value>
            <value>
                <fullName>Yes: Direct - Tier 1</fullName>
            </value>
            <value>
                <fullName>Yes: Direct - Tier 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>