force-app/main/default/objects/Opportunity/fields/Contract_Formula__c.field-meta.xml
<CustomField>
    <fullName>Contract_Formula__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  Contract.Id  ,  Contract.Contract_Number__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLL Contract Number</label>
    <type>Text</type>
</CustomField>