force-app/main/default/objects/Opportunity/fields/Contract_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Upload_Date__c</fullName>
    <description>Date the contract was uploaded (In House)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Upload Date</label>
    <type>Date</type>
</CustomField>