force-app/main/default/objects/Opportunity/fields/Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this is a Corporate Account</inlineHelpText>
    <label>Corporate Account</label>
    <type>Checkbox</type>
</CustomField>