force-app/main/default/objects/Opportunity/fields/Corporate_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account_Name__c</fullName>
    <description>Name of the Corporate Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Corporate Account Name</label>
    <type>TextArea</type>
</CustomField>