force-app/main/default/objects/Opportunity/fields/Credit_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Expiration_Date__c</fullName>
    <businessOwnerUser>mmikael.franzen@dllgroup.com.st01d06</businessOwnerUser>
    <description>Credit expiration date for the synced quote for the customer associated with the quote</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Credit expiration date of customer quote</inlineHelpText>
    <label>Credit Expiration Date</label>
    <type>Date</type>
</CustomField>