force-app/main/default/objects/Opportunity/fields/Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Current_Month__c</fullName>
    <description>Hidden field used to filter reports</description>
    <formula>MONTH(TODAY()) = MONTH( CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month</label>
    <type>Checkbox</type>
</CustomField>