force-app/main/default/objects/Opportunity/fields/Current_Month_Funded__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Funded__c</fullName>
    <description>for reporting previous year funded</description>
    <formula>MONTH(TODAY()) = MONTH(Funded_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Funded</label>
    <type>Checkbox</type>
</CustomField>