force-app/main/default/objects/Opportunity/fields/Current_Month_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Recieved__c</fullName>
    <description>for reporting previous year</description>
    <formula>MONTH(TODAY()) = MONTH(Application_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month Recieved</label>
    <type>Checkbox</type>
</CustomField>