force-app/main/default/objects/Opportunity/fields/CUSTOM_Private__c.field-meta.xml
<CustomField>
    <fullName>CUSTOM_Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CUSTOM Private</label>
    <type>Checkbox</type>
</CustomField>