force-app/main/default/objects/Opportunity/fields/Customer_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Customer_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Authorization for checking customer credit</description>
    <inlineHelpText>Customer&apos;s credit check authorization flag</inlineHelpText>
    <label>Customer Authorization</label>
    <type>Checkbox</type>
</CustomField>