force-app/main/default/objects/Opportunity/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Code</label>
    <referenceTo>System_ID__c</referenceTo>
    <relationshipLabel>Opportunities (Customer Code)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>