force-app/main/default/objects/Opportunity/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <businessOwnerUser>mmikael.franzen@dllgroup.com.st01d06</businessOwnerUser>
    <description>Customer&apos;s account external identifier. It is used for list view. The text type of the field is selected to search by the value of this field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer&apos;s account external identifier. It is used for list view. The text type of the field is selected to search by the value of this field</inlineHelpText>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>