force-app/main/default/objects/Opportunity/fields/Customer_Story__c.field-meta.xml
<CustomField>
    <fullName>Customer_Story__c</fullName>
    <description>Background on Customer Business</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Background on Customer Business</inlineHelpText>
    <label>Customer Story</label>
    <length>255</length>
    <type>Text</type>
</CustomField>