force-app/main/default/objects/Opportunity/fields/Dealer_Add_on__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Add_on__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The additional fees that are charged when dealer is added on</description>
    <label>Dealer-Add on</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>