force-app/main/default/objects/Opportunity/fields/Dealer_Phone1__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Phone1__c</fullName>
    <formula>LEFT(Account.Phone, 3) + &apos;-&apos; +
MID(Account.Phone, 4, 3) + &apos;-&apos; +
RIGHT(Account.Phone, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Phone</label>
    <type>Text</type>
</CustomField>