force-app/main/default/objects/Opportunity/fields/Decline_Letter_Comments__c.field-meta.xml
<CustomField>
    <fullName>Decline_Letter_Comments__c</fullName>
    <description>The field holds the decline letter comments sent from MOSAIC for the Opportunities.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Decline Letter Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>