force-app/main/default/objects/Opportunity/fields/DLL_Funder_Position__c.field-meta.xml
<CustomField>
    <fullName>DLL_Funder_Position__c</fullName>
    <description>NBD</description>
    <label>DLL Funder Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive funder</fullName>
            </value>
            <value>
                <fullName>Right of first refusal</fullName>
            </value>
            <value>
                <fullName>Panel funder</fullName>
            </value>
            <value>
                <fullName>Approved funder</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>