force-app/main/default/objects/Opportunity/fields/Doc_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Doc_Fee_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the Document fee Amount</description>
    <label>Doc Fee Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>