force-app/main/default/objects/Opportunity/fields/Doc_Fee_Received__c.field-meta.xml
<CustomField>
    <fullName>Doc_Fee_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if Document fees were received</description>
    <label>Doc Fee Received</label>
    <type>Checkbox</type>
</CustomField>