force-app/main/default/objects/Opportunity/fields/Document_Delivery_Preference__c.field-meta.xml
<CustomField>
    <fullName>Document_Delivery_Preference__c</fullName>
    <description>For DLL on Demand Portal - records whether the user selected to have their documents created and sent via DocuSign (in MOSAIC) or via a PDF</description>
    <label>Document Delivery Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Docusign</fullName>
                <default>true</default>
                <label>Docusign</label>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>