force-app/main/default/objects/Opportunity/fields/Document_Record__c.field-meta.xml
<CustomField>
    <fullName>Document_Record__c</fullName>
    <description>summarizes the number of document records on an opportunity for G&amp;T</description>
    <label>Document Record</label>
    <summaryForeignKey>Document__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>