force-app/main/default/objects/Opportunity/fields/Document_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Sent_Date__c</fullName>
    <description>Date Documents were sent out</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Sent Date</label>
    <type>Date</type>
</CustomField>